musicaminimalista/Parser/AbcNotationParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from AbcNotation.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591


	using MusicaMinimalista.Objects.Music;
	using MusicaMinimalista.Objects.Utils;

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class AbcNotationParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, XField=9, 
		TField=10, VField=11, KField=12, MField=13, QField=14, LFieldHeader=15, 
		Num=16, PitchSymbol=17, Accidental=18, Lbrack=19, Rbrack=20, NumSymbol=21, 
		WhiteSpace=22, Remark=23, NewLine=24, LineComment=25;
	public const int
		RULE_file = 0, RULE_header = 1, RULE_x_field = 2, RULE_t_field = 3, RULE_m_field = 4, 
		RULE_q_field = 5, RULE_l_field = 6, RULE_k_field = 7, RULE_score = 8, 
		RULE_v_field = 9, RULE_music_elem = 10, RULE_ignored_elem = 11, RULE_chord = 12, 
		RULE_note = 13, RULE_noteduration = 14, RULE_pitch = 15, RULE_bar = 16;
	public static readonly string[] ruleNames = {
		"file", "header", "x_field", "t_field", "m_field", "q_field", "l_field", 
		"k_field", "score", "v_field", "music_elem", "ignored_elem", "chord", 
		"note", "noteduration", "pitch", "bar"
	};

	private static readonly string[] _LiteralNames = {
		null, "'/'", "'|'", "'|]'", "'||'", "'[|'", "'|:'", "':|'", "'::'", null, 
		null, null, null, null, null, "'L:'", null, null, null, "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "XField", "TField", 
		"VField", "KField", "MField", "QField", "LFieldHeader", "Num", "PitchSymbol", 
		"Accidental", "Lbrack", "Rbrack", "NumSymbol", "WhiteSpace", "Remark", 
		"NewLine", "LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AbcNotation.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		AbcNoteParser noteParser = new AbcNoteParser();
		List<string> voiceNames = new List<string>();
		int currentVoice = 0;

		public void changeToVoice(string voiceStr, Motif motif){
			if (voiceNames.Count == 0)
			{
				voiceNames.Add(voiceStr);
				return;
			}

			for (int i = 0; i < voiceNames.Count; i++)
			{
				if (voiceNames[i] == voiceStr) currentVoice = i;
			}

			voiceNames.Add(voiceStr);
			motif.addVoice(new Voice());
			currentVoice = voiceNames.Count - 1;
		}

	public AbcNotationParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class FileContext : ParserRuleContext {
		public Motif m;
		public HeaderContext h;
		public ScoreContext s;
		public HeaderContext header() {
			return GetRuleContext<HeaderContext>(0);
		}
		public ScoreContext score() {
			return GetRuleContext<ScoreContext>(0);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 34; _localctx.h = header();
			}
			{
			State = 35; _localctx.s = score();
			 _localctx.m =  _localctx.s.m; _localctx.m.setTonality(_localctx.h.tonality);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderContext : ParserRuleContext {
		public int referenceNumber;
		public string title;
		public Tonality tonality;
		public string length;
		public X_fieldContext x;
		public T_fieldContext t;
		public M_fieldContext m;
		public L_fieldContext l;
		public Q_fieldContext q;
		public K_fieldContext k;
		public X_fieldContext x_field() {
			return GetRuleContext<X_fieldContext>(0);
		}
		public T_fieldContext t_field() {
			return GetRuleContext<T_fieldContext>(0);
		}
		public K_fieldContext k_field() {
			return GetRuleContext<K_fieldContext>(0);
		}
		public M_fieldContext[] m_field() {
			return GetRuleContexts<M_fieldContext>();
		}
		public M_fieldContext m_field(int i) {
			return GetRuleContext<M_fieldContext>(i);
		}
		public L_fieldContext[] l_field() {
			return GetRuleContexts<L_fieldContext>();
		}
		public L_fieldContext l_field(int i) {
			return GetRuleContext<L_fieldContext>(i);
		}
		public Q_fieldContext[] q_field() {
			return GetRuleContexts<Q_fieldContext>();
		}
		public Q_fieldContext q_field(int i) {
			return GetRuleContext<Q_fieldContext>(i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterHeader(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitHeader(this);
		}
	}

	[RuleVersion(0)]
	public HeaderContext header() {
		HeaderContext _localctx = new HeaderContext(Context, State);
		EnterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 38; _localctx.x = x_field();
			_localctx.referenceNumber =  _localctx.x.referenceNumber;
			}
			{
			State = 41; _localctx.t = t_field();
			_localctx.title =  _localctx.t.title;
			}
			State = 49;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MField) | (1L << QField) | (1L << LFieldHeader))) != 0)) {
				{
				State = 47;
				switch (TokenStream.La(1)) {
				case MField:
					{
					State = 44; _localctx.m = m_field();
					}
					break;
				case LFieldHeader:
					{
					State = 45; _localctx.l = l_field();
					}
					break;
				case QField:
					{
					State = 46; _localctx.q = q_field();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 51;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			{
			State = 52; _localctx.k = k_field();

						_localctx.tonality =  Tonality.parse(_localctx.k.tonality_str);
						noteParser.setTonality(_localctx.tonality);
					
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class X_fieldContext : ParserRuleContext {
		public int referenceNumber;
		public IToken x;
		public ITerminalNode XField() { return GetToken(AbcNotationParser.XField, 0); }
		public X_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_x_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterX_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitX_field(this);
		}
	}

	[RuleVersion(0)]
	public X_fieldContext x_field() {
		X_fieldContext _localctx = new X_fieldContext(Context, State);
		EnterRule(_localctx, 4, RULE_x_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 55; _localctx.x = Match(XField);
			 _localctx.referenceNumber =  int.Parse(((_localctx.x!=null?_localctx.x.Text:null)).Substring(2)); 
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class T_fieldContext : ParserRuleContext {
		public string title;
		public IToken t;
		public ITerminalNode TField() { return GetToken(AbcNotationParser.TField, 0); }
		public T_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_t_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterT_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitT_field(this);
		}
	}

	[RuleVersion(0)]
	public T_fieldContext t_field() {
		T_fieldContext _localctx = new T_fieldContext(Context, State);
		EnterRule(_localctx, 6, RULE_t_field);
		try {
			State = 61;
			switch (TokenStream.La(1)) {
			case TField:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 58; _localctx.t = Match(TField);
				 _localctx.title =  ((_localctx.t!=null?_localctx.t.Text:null)).Substring(2); 
				}
				}
				break;
			case Eof:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case VField:
			case KField:
			case MField:
			case QField:
			case LFieldHeader:
			case PitchSymbol:
			case Accidental:
			case Lbrack:
			case WhiteSpace:
			case Remark:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class M_fieldContext : ParserRuleContext {
		public IToken m;
		public ITerminalNode MField() { return GetToken(AbcNotationParser.MField, 0); }
		public M_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_m_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterM_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitM_field(this);
		}
	}

	[RuleVersion(0)]
	public M_fieldContext m_field() {
		M_fieldContext _localctx = new M_fieldContext(Context, State);
		EnterRule(_localctx, 8, RULE_m_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 63; _localctx.m = Match(MField);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Q_fieldContext : ParserRuleContext {
		public IToken q;
		public ITerminalNode QField() { return GetToken(AbcNotationParser.QField, 0); }
		public Q_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_q_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterQ_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitQ_field(this);
		}
	}

	[RuleVersion(0)]
	public Q_fieldContext q_field() {
		Q_fieldContext _localctx = new Q_fieldContext(Context, State);
		EnterRule(_localctx, 10, RULE_q_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 65; _localctx.q = Match(QField);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class L_fieldContext : ParserRuleContext {
		public NotedurationContext d;
		public ITerminalNode LFieldHeader() { return GetToken(AbcNotationParser.LFieldHeader, 0); }
		public NotedurationContext noteduration() {
			return GetRuleContext<NotedurationContext>(0);
		}
		public L_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_l_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterL_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitL_field(this);
		}
	}

	[RuleVersion(0)]
	public L_fieldContext l_field() {
		L_fieldContext _localctx = new L_fieldContext(Context, State);
		EnterRule(_localctx, 12, RULE_l_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 67; Match(LFieldHeader);
			State = 68; _localctx.d = noteduration();
			noteParser.setUnitNoteLength(_localctx.d.nd);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class K_fieldContext : ParserRuleContext {
		public string tonality_str;
		public IToken k;
		public ITerminalNode KField() { return GetToken(AbcNotationParser.KField, 0); }
		public K_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_k_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterK_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitK_field(this);
		}
	}

	[RuleVersion(0)]
	public K_fieldContext k_field() {
		K_fieldContext _localctx = new K_fieldContext(Context, State);
		EnterRule(_localctx, 14, RULE_k_field);
		try {
			State = 74;
			switch (TokenStream.La(1)) {
			case KField:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 71; _localctx.k = Match(KField);
				 _localctx.tonality_str =  ((_localctx.k!=null?_localctx.k.Text:null)).Substring(2); 
				}
				}
				break;
			case Eof:
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case VField:
			case PitchSymbol:
			case Accidental:
			case Lbrack:
			case WhiteSpace:
			case Remark:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScoreContext : ParserRuleContext {
		public Motif m;
		public Music_elemContext me;
		public V_fieldContext v;
		public BarContext[] bar() {
			return GetRuleContexts<BarContext>();
		}
		public BarContext bar(int i) {
			return GetRuleContext<BarContext>(i);
		}
		public Ignored_elemContext[] ignored_elem() {
			return GetRuleContexts<Ignored_elemContext>();
		}
		public Ignored_elemContext ignored_elem(int i) {
			return GetRuleContext<Ignored_elemContext>(i);
		}
		public Music_elemContext[] music_elem() {
			return GetRuleContexts<Music_elemContext>();
		}
		public Music_elemContext music_elem(int i) {
			return GetRuleContext<Music_elemContext>(i);
		}
		public V_fieldContext[] v_field() {
			return GetRuleContexts<V_fieldContext>();
		}
		public V_fieldContext v_field(int i) {
			return GetRuleContext<V_fieldContext>(i);
		}
		public ScoreContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_score; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterScore(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitScore(this);
		}
	}

	[RuleVersion(0)]
	public ScoreContext score() {
		ScoreContext _localctx = new ScoreContext(Context, State);
		EnterRule(_localctx, 16, RULE_score);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			 _localctx.m =  new Motif(); _localctx.m.addVoice(new Voice());
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << VField) | (1L << PitchSymbol) | (1L << Accidental) | (1L << Lbrack) | (1L << WhiteSpace) | (1L << Remark))) != 0)) {
				{
				State = 87;
				switch (TokenStream.La(1)) {
				case PitchSymbol:
				case Accidental:
				case Lbrack:
					{
					{
					State = 77; _localctx.me = music_elem();
					_localctx.m.getVoice(currentVoice).add(_localctx.me.mi);
					}
					}
					break;
				case T__1:
				case T__2:
				case T__3:
				case T__4:
				case T__5:
				case T__6:
				case T__7:
					{
					{
					State = 80; bar();
					noteParser.resetAccidentals();
					}
					}
					break;
				case WhiteSpace:
				case Remark:
					{
					{
					State = 83; ignored_elem();
					}
					}
					break;
				case VField:
					{
					{
					State = 84; _localctx.v = v_field();

										changeToVoice(_localctx.v.voice_str, _localctx.m);
									
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class V_fieldContext : ParserRuleContext {
		public string voice_str;
		public IToken v;
		public ITerminalNode VField() { return GetToken(AbcNotationParser.VField, 0); }
		public V_fieldContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_v_field; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterV_field(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitV_field(this);
		}
	}

	[RuleVersion(0)]
	public V_fieldContext v_field() {
		V_fieldContext _localctx = new V_fieldContext(Context, State);
		EnterRule(_localctx, 18, RULE_v_field);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 92; _localctx.v = Match(VField);
			 _localctx.voice_str =  ((_localctx.v!=null?_localctx.v.Text:null)).Substring(2); 
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Music_elemContext : ParserRuleContext {
		public MusicItem mi;
		public NoteContext n;
		public ChordContext c;
		public NoteContext note() {
			return GetRuleContext<NoteContext>(0);
		}
		public ChordContext chord() {
			return GetRuleContext<ChordContext>(0);
		}
		public Music_elemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_music_elem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterMusic_elem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitMusic_elem(this);
		}
	}

	[RuleVersion(0)]
	public Music_elemContext music_elem() {
		Music_elemContext _localctx = new Music_elemContext(Context, State);
		EnterRule(_localctx, 20, RULE_music_elem);
		try {
			State = 101;
			switch (TokenStream.La(1)) {
			case PitchSymbol:
			case Accidental:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 95; _localctx.n = note();
				_localctx.mi =  _localctx.n.n;
				}
				}
				break;
			case Lbrack:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 98; _localctx.c = chord();
				_localctx.mi =  _localctx.c.c;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ignored_elemContext : ParserRuleContext {
		public ITerminalNode WhiteSpace() { return GetToken(AbcNotationParser.WhiteSpace, 0); }
		public ITerminalNode Remark() { return GetToken(AbcNotationParser.Remark, 0); }
		public Ignored_elemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ignored_elem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterIgnored_elem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitIgnored_elem(this);
		}
	}

	[RuleVersion(0)]
	public Ignored_elemContext ignored_elem() {
		Ignored_elemContext _localctx = new Ignored_elemContext(Context, State);
		EnterRule(_localctx, 22, RULE_ignored_elem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			_la = TokenStream.La(1);
			if ( !(_la==WhiteSpace || _la==Remark) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ChordContext : ParserRuleContext {
		public Chord c;
		public NoteContext n;
		public ITerminalNode Lbrack() { return GetToken(AbcNotationParser.Lbrack, 0); }
		public ITerminalNode Rbrack() { return GetToken(AbcNotationParser.Rbrack, 0); }
		public NoteContext[] note() {
			return GetRuleContexts<NoteContext>();
		}
		public NoteContext note(int i) {
			return GetRuleContext<NoteContext>(i);
		}
		public ChordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_chord; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterChord(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitChord(this);
		}
	}

	[RuleVersion(0)]
	public ChordContext chord() {
		ChordContext _localctx = new ChordContext(Context, State);
		EnterRule(_localctx, 24, RULE_chord);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			_localctx.c =  new Chord();
			State = 106; Match(Lbrack);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 107; _localctx.n = note();
				_localctx.c.add(_localctx.n.n);
				}
				}
				State = 112;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( _la==PitchSymbol || _la==Accidental );
			State = 114; Match(Rbrack);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NoteContext : ParserRuleContext {
		public Note n;
		public PitchContext p;
		public NotedurationContext nd;
		public PitchContext pitch() {
			return GetRuleContext<PitchContext>(0);
		}
		public NotedurationContext noteduration() {
			return GetRuleContext<NotedurationContext>(0);
		}
		public NoteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_note; } }
		public override void EnterRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.EnterNote(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IAbcNotationListener typedListener = listener as IAbcNotationListener;
			if (typedListener != null) typedListener.ExitNote(this);
		}
	}
